# stopless-java-gc

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build
docs/: 00_design_overview.md  01_phase_i_zgc_port.md  02_phase_ii_cheri_barrier.md  03_build_setup.md  04_risk_register.md  05_zgc_cheri_collision_report.md  06_cornucopia_api_survey.md  07_c2_jit_status.md  08_phase_1_results.md  09_class_injected_fields_cap_provenance.md  10_cheri_seam_scan.md  11_stack_trace_class_mirror_allocate.md  12_simd_codegen_wordsize_seam.md  13_session_summary_2026_05_27.md  14_handoff_shift64_and_pivot.md  15_cheri_stopless_design.md  16_caprev_status.md  17_phase_c_overview.md  18_handoff_to_hasee_session.md  19_decisions_log.md  20_c3_c4_regen_playbook.md  21_progress_snapshot.md  22_phase_task_tracker.md  23_c6_resume_snapshot.md  24_c6_breakthrough_to_string_clinit.md  25_c6_pc_pinpointed_in_codecache.md  26_c6_session_finale.md  27_morello_cap_isa_encodings.md  28_session_grand_finale.md  29_session_end_full_recap.md  30_gdb_diagnostic_breakthrough.md  31_l17b_resolved_bit0_was_wrong.md  32_l25_codecache_vs_libjvm_bounds.md  33_l25_option_c_skeleton_blocked_at_blr.md  34_bytecode_execution_milestone_L25_L36.md  35_milestone_bytecode_exec_to_resolution_L25_L42.md  36_L42_cpcache_entry_size_structural.md  37_L43_L46_oop_barriers_invoke_and_libjvm_data_cap.md  38_L47_wordsize_vs_bytesperword_slot_addressing.md  39_L54_L59_klass_method_csp_esp_and_a64_c64_return_boundary.md  (+3 more)
docs/c1/: design.md  impl_notes.md  test.md
docs/c2/: design.md  impl_notes.md  test.md
docs/c3/: design.md  impl_notes.md  test.md
docs/c4/: design.md  impl_notes.md  test.md
paper/: README.md  phase_i.tex  phase_ii.tex  refs.bib
paper/data/: c11_batched_revoke.txt  c11_heap_independence_stoplessbench.txt  c11_sound_concurrent_heapgrowth.txt  c11_stw_batched_revoke.txt  clg_probe_output.txt
paper/stopless/: .gitignore  Makefile  SUBMISSION.md  main.tex  plots.py  refs.bib
patches/: README.md
patches/cap_runtime/: 0003-disable-diag-sigill-handler.patch  0004-l38-safefetch-sigprot-redirect.patch
patches/openjdk-jdk17/: 0001-cap-runtime-hook.patch.template  0002-platform-accept-cheri-cap-ptr-size.patch  0003-jvmmapfile-accept-bsd-target.patch  0004-flags-cflags-define-allbsd-source-for-jvm.patch  0005-flags-cflags-define-BSD-macro-for-jvm.patch  0006-bytes-bsd-aarch64-use-freebsd-endian.patch  0007-bitmap-bm-word-t-uint64.patch  0008-shenandoah-bitmap-bm-word-t-uint64.patch  0009-flags-cflags-rederive-jvm-defs-for-build.patch  0010-macroassembler-aarch64-mov-cheri-overload.patch  0011-count-trailing-zeros-cheri-overload.patch  0012-count-leading-zeros-cheri-specialization.patch  0013-buildjdk-spec-override-extra-asflags.patch  0014-copy-bsd-aarch64-cheri-fallback.patch  0015-assembler-aarch64-address-cheri-overload.patch  0016-compilerdefinitions-max2-explicit-uintx.patch  0017-copy-bsd-aarch64-S-cheri-stub.patch  0018-copy-bsd-aarch64-hpp-cheri-shortcircuit.patch  (+160 more)
scripts/: apply_0081_intent_on_hasee.sh  apply_patches.sh  apply_stoplessgc_to_openjdk.py  bootstrap.sh  build_jdk.sh  c_phase_verify.sh  catch_fault_el0.gdb  catch_landing.gdb  catch_segv_disasm.gdb  catch_sigexit.gdb  fast_iter.sh  findfatal.py  fix_patch_counts.py  launch_qemu_dbg.sh  plot_results.py  qmon.py  run_benchmarks.sh  run_in_fvp.sh  run_in_qemu.sh  run_tests.sh  scan_cheri_seams.py  upstream_pins.env
src/cap_runtime/: CMakeLists.txt  cap_runtime.cc  cap_runtime.h  forwarding_table.cc  forwarding_table.h  revoke_glue.cc  revoke_glue.h  side_table.cc  side_table.h
src/cap_runtime/stopless_gc/: Makefile  README.md  allocator.c  allocator.h  api.h  forward_table.c  forward_table.h  handler.c  handler.h  revoke.c  revoke.h  test_clg_probe
src/cap_runtime/stopless_gc/tests/: test_alloc.c  test_alloc_concurrent.c  test_basic.c  test_clg_probe.c  test_concurrent_move.c  test_multi.c
src/measurement/: CMakeLists.txt  pmu_sample.cc  pmu_sample.h
tests/unit/: CMakeLists.txt  test_cap_runtime.cc  test_forwarding_table.cc  test_side_table.cc
(+28 files in other folders)
